--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
+    "aos": "^2.3.4",
     "axios": "^1.1.3",
+    "v-lazy-image": "^2.1.1",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
